--- a/content/2017_cfp.md
+++ b/content/2017_cfp.md
@@ -3,8 +3,8 @@ Date: 2017-09-03 12:20
 Category: eloop2017
 cover: images/eloop2016/enterprise_dinge.jpg
 
-Die eloop macht zum zweiten Mal Station in Stuttgart - dieses Jahr unter dem Motto "Wegwerfen, neu machen". Wir suchen Geschichten und Vorträge rund ums Thema Hacker in der Enterprise Welt. Ob **Cyber Offense** oder **Idustrie 4.0**: Auf der eloop bist du mit deinem Thema perfekt aufgehoben. Bonuspunkte für Medieneinsatz, Handouts und freies Sprechen. Jeder Vortragende erhält außerdem ein individuelles Horoskop auf echten Papier.
+Die eloop macht zum zweiten Mal Station in Stuttgart - dieses Jahr unter dem Motto "Wegwerfen, neu machen". Wir suchen Geschichten und Vorträge rund um das Thema Hacker in der Enterprise Welt. Ob **Cyber Offense** oder **Industrie 4.0**: Auf der eloop bist du mit deinem Thema perfekt aufgehoben. Bonuspunkte für Medieneinsatz, Handouts und freies Sprechen. Jeder Vortragende erhält außerdem ein individuelles Horoskop auf echten Papier und  eine doppelte Portion Sektempfang.
 
-Freie Panel reichen von 15 bis 60 Minuten. Auch Lightning Talks (5 Minuten) können gerne eingereicht werden. Wir freuen uns auf eure Beiträge.
+Freie Panels reichen von 15 bis 60 Minuten. Auch Lightning Talks (5 Minuten) können gerne eingereicht werden. Wir freuen uns auf eure Beiträge.
 
-Einreichungen bitte an [cfp@eloop.org](mailto:cfp@eloop.org)
+Einreichungen bitte an [cfp@eloop.org](mailto:cfp@eloop.org), oder per Vorstellungsgespräch im [IRC auf Freenode #krebs](irc://irc.freenode.net/#krebs).
